# Arcadia

./: .env.sample  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  buildall.sh  fmt  fmt.sh  pkg.yaml  process.json  project.yaml
.generated/: RPCMethod.ts  RPCRequest.ts
.github/: dependabot.yml
.github/workflows/: rust.yml
.sqlx/: query-00f6f807f89f64c4ccbefa4cc5ea980da710a6f853403555f9bd922000792202.json  query-019bd5d49113060b3d1453eee79f42191bf091bac59749bac2a92b91d6d67f97.json  query-01c10b4d8d25dc702653f39e2fadbc0981f3175e2f68c93ba58b737f974e4305.json  query-031ce11214d32e223aedf783bb8ea9e9804908b048bfdff2ef5f55c4c87374ac.json  query-03c6cb1586fb31ef422d7b081fb2751250c9cb9aa15eebab186f6aa962939f78.json  query-04b50a98c0b35239e063d634e153899db3c0f892c12b8257a3af40b5ea383026.json  query-074960471d9a521746f2ba808ce5aeedc29b0804a65893d4b96cbd9f47fac0c7.json  query-07d138e69b3ff9a2ab9af3991ed5e77e44f66f40480b427e8b499a95636611c1.json  query-095e49411610fae2fea8c0650a5975ef106ae8666c7026ef8412a3b58706c646.json  query-09925017648affd882f7109d574df2eeac542dfd29eadf5aa171bcd9337dcdf1.json  query-09ef16675f0242fdd545088ceb5a32607c6926923034dbbb26e881428e86b812.json  query-0c31e17abbff7e30328e42429b5916c197c4cad357b1ea80bba32288e85fb441.json  query-0ca9651eefd1476684f14042a86c351982239f51cb7f2c4a58790bbedc8d06ee.json  query-107770a1a0ea741b99fe67ecb94245a963d5c3b8a874ee20d4f1e09553c899dc.json  query-10acb213878a099f436ce5c795d2898c0175d091c05235f5428e2bed962a363b.json  query-10cb4d3829f2d663e35411653e95814e4668fd62cb97416c5e7a660758fddcc0.json  query-1303a43916e953b75912b86579b1f8674b19720f5c6dfb3ca4c4514480337506.json  query-130f8464e1fd518432cb11023d02ad50fdc78361778004d93ba5d8b6c483daaa.json  query-13d99af4c2ed68629061cc0280c4d976702b1c6dfe60db0e9776db8fe721ee44.json  query-14fc65a5867377eb63f7efc30ca24397a13ecf02538f97b064190e794397b18a.json  query-17cf6be567251433b1b998e2daa8f2d6cd34031cb8c306e4cd700b8f05af78ba.json  query-1b005e4796556afef4ad908fd20f79813819de5b16942835599e5b800fbc750a.json  query-1b026a2176e33ab87b50b02616950b920b936a38579a3578c471f21751968541.json  query-1b798ca7ab7a37229fd80d18dabd4e0ffec5b7ef17e1172344958e16cff59e01.json  query-1c655334dae8334788e81b6bec44a0935b6f6e4d6459cc227fa161a9d6a0c8d7.json  query-1db63c7739462276561c513efc3b5631f5bbd1a0cd6ff0a545bff64f72f17d01.json  query-20eb3c140f4bf7ef104b1a56043c96484462edaef0252200f4d3fee505e1ce38.json  query-22c716089ecb11d4250bcbffdc32171fa1613c4f555dc5a3c940e68124d93c92.json  query-24847550d478287026e9739210bf687ba08a9298d241abdf573453903783a402.json  query-24939aa63079d80ad61cea068005c615a2f5237fc9a9f212e5148e1004c4b85b.json  query-27c290206d9d2e8f3f186bde9342c2d4f8ac104c258c5be969a4a5eebd3d507e.json  query-289a44254523688ef700ac526f6bdf2f11f56845edfa1a9af7fe9efedc67910e.json  query-28af5ea4fdfc819c4f5a8f226766a4a230f97bece7e8a68a5552c53e0b4e8670.json  query-2985f35e7020383467359dd7e4ebcfae430bc4cf4eb55b9472a391872e792977.json  query-29f0452c18943ba2067c301eaf2e9a4293c25ce78c70fc4a3bbf3452dd7abd25.json  query-2b2fe4f59cc73f9f47462933568173b21c5982f26468876b3c23affdb0b63f67.json  query-2c2f2117bef622d46243dff735542885a8e7d5b2c6b29214807894cfadbdc267.json  query-2dac4ccaa0eb6a8031d47941ab5707468bf17558dfcddd94402d84e225d3110a.json  query-2e9c01e91ffc478e657dd45b91b9b10e41268635f5acab4653e678f3aa195d8f.json  query-3067052e12100e8e7098454a7ebb995d6043c9980e2db99cde7d2e08a3e260ed.json  (+197 more)
_slogjson/: Cargo.toml
_slogjson/src/: lib.rs
api/: .env.sample  Cargo.toml  Makefile  process.json
api/src/: loggy.rs  main.rs  models.rs  routes.rs  testing.rs
bot/: .env.sample  Cargo.toml  Makefile  process.json
bot/leone/: Cargo.toml
bot/src/: _checks.rs  _onboarding.rs  _utils.rs  admin.rs  botowners.rs  explain.rs  help.rs  main.rs  onboarding.rs  rpcserver.rs  search.rs  staff.rs  stats.rs  testing.rs  tests.rs
bot/src/impls/: bool.rs  cache.rs
libavacado/: Cargo.toml  build.rs
libavacado/src/: bot.rs  checks.rs  env.rs  handler.rs  lib.rs  manage.rs  maps.rs  onboarding.rs  public.rs  search.rs  staff.rs  staffapps.rs  types.rs
libteapot/: Cargo.toml
libteapot/src/: lib.rs  logger.rs  slogjson_vendored.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: _onboarding.rs  _utils.rs  admin.rs  botowners.rs  checks.rs  config.rs  explain.rs  help.rs  leaderboard.rs  main.rs  onboarding.rs  rpc_command.rs  rpcserver.rs  staff.rs  stats.rs  test.rs  testing.rs  tests.rs  todo.rs
src/ashfur/: .gitignore  README.md  ashfur.rs  authkit.rs  config.rs  server.rs
src/ashfur/mongoschemas/: core.rs  internal_cases.rs  mod.rs
src/impls/: actions.rs  cache.rs  crypto.rs  dovewing.rs  link.rs  mod.rs  onboard_states.rs  partners.rs  perms.rs  target_types.rs  utils.rs
src/panelapi/: auth.rs  core.rs  fix.py  mod.rs  panel_query.rs  server.rs  types.rs
src/panelapi/actions/: authorize.rs  baseanalytics.rs  getuser.rs  hello.rs  mod.rs  searchentitys.rs  updatepartners.rs  updateshopholds.rs  updatestaffmembers.rs  updatestaffposition.rs  updatevotecredittiers.rs
src/panelapi/types/: analytics.rs  auth.rs  blog.rs  bot_whitelist.rs  bots.rs  cdn.rs  changelogs.rs  entity.rs  mod.rs  partners.rs  rpc.rs  rpclogs.rs  shop_items.rs  staff_disciplinary.rs  staff_members.rs  staff_positions.rs  vote_credit_tiers.rs  webcore.rs
src/rpc/: command.rs  core.rs  mod.rs  server.rs
src/tasks/: assetcleaner.rs  autounclaim.rs  bans.rs  deadguilds.rs  deletedbots.rs  genericcleaner.rs  japiupdate.rs  mod.rs  perms.rs  premium.rs  specrolesync.rs  staffresync.rs  taskcat.rs  teamcleaner.rs  topreviewersync.rs  uptime.rs  voterestter.rs
src/tasks/__toberewritten/: README.md  uptime.rs
