[package]
name = "bot"
version = "1.0.0"
edition = "2021"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
panic = "abort"  # Abort on panic. This is what we want for a bot.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = { version = "3.4.3", features = ["axum_extras"] }
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"]}
futures-util = "0.3"
ring = "0.16"
data-encoding = "2.3"
indexmap = { version = "1.9.1", features = ["serde"] }
ts-rs = "6.2"
axum = "0.6"
tower-http = { version = "0.3", features = ["cors"] }
rand = "0.8"
serde_yaml = "0.9"
once_cell = "1.17"
strum = "0.24"
strum_macros = "0.24"
moka = { version = "0.11", default-features = true, features = ["future", "logging"] }

[dependencies.tokio]
version = "1"
default-features = true
features = ["full"]

[dependencies.serenity]
git = "https://github.com/serenity-rs/serenity"
branch = "next"
features = ["model", "http", "cache", "rustls_backend"]

[build-dependencies]
vergen = "7"
anyhow = "1.0"
