[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.0.1", features = ["rustls"] }
actix-cors = "0.6.2"
tokio = "1.20.0"
actix-rt = "2.6.0"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls" , "postgres", "chrono", "uuid", "bigdecimal", "json"] }
futures = "0.3.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
dotenv = "0.15.0"
serenity = { version = "0.11", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "cache"] }
libavacado = { path = "../libavacado" }
moka = { version = "0.9", features = ["future"] }
chrono = { version = "0.4.19", features = ["serde"]}
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
utoipa = { version = "2", features = ["actix_extras"] }
actix-ws = "0.2.5"
slog = "2.7.0"
slog-json = "2.6.1"
slog-async = "2.7.0"
