[package]
name = "bot"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = "0.4"
serde = "1.0"
docser = { git = "https://github.com/RustLibs/docser.git", branch = "main" }
log = "0.4.14"
env_logger = "0.9"
serde_json = "1.0"
serde_repr = "0.1"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"]}
dotenv = "0.15"
futures-util = "0.3"
libavacado = { path = "../libavacado" }
leone = { path = "./leone" }
ring = "0.16"
data-encoding = "2.3"
slog = "2.7.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
libteapot = { path = "../libteapot" }

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt", "sync", "time", "rt-multi-thread"]
