[package]
name = "bot"
version = "0.3.0"
edition = "2021"
 
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poise = { git = "https://github.com/serenity-rs/poise", branch = "serenity-next" }
serde = "1.0"
log = "0.4"
env_logger = "0.9"
serde_json = "1.0"
serde_repr = "0.1"
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
chrono = { version = "0.4", features = ["serde"]}
futures-util = "0.3"
libavacado = { path = "../libavacado" }
ring = "0.16"
data-encoding = "2.3"
indexmap = { version = "1.9.1", features = ["serde"] }
moka = { version = "0.9", features = ["future"] }
ts-rs = "6.2"
axum = "0.6"
tower-http = { version = "0.3", features = ["cors"] }

[dependencies.tokio]
version = "1"
default-features = true
features = ["fs", "macros", "rt", "sync", "time", "rt-multi-thread"]
