[package]
name = "libavacado"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.5", features = [ "runtime-actix-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }
serenity = { version = "0.11", default-features = false, features = ["model", "http", "cache", "rustls_backend"] }
reqwest = { version = "0.11.9", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0.137"
serde_json = "1.0.79"
log = "0.4.14"
chrono = { version = "0.4.19", features = ["serde"]}
moka = { version = "0.8", features = ["future"] }
rand = "0.8.5"
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1", "serde"] }
deadpool = { version = "0.9.5", features = ["rt_tokio_1", "serde"] }

[build-dependencies]
vergen = "7.2.1"
anyhow = "1.0"