[package]
name = "libavacado"
version = "0.2.2"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }
serenity = { version = "0.11", default-features = false, features = ["model", "http", "cache", "rustls_backend"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"]}
moka = { version = "0.9", features = ["future"] }
rand = "0.8.5"
deadpool-redis = { version = "0.11.0", features = ["rt_tokio_1", "serde"] }
deadpool = { version = "0.9.5", features = ["rt_tokio_1", "serde"] }
itertools = "0.10.5"
ammonia = "3.2.1"
indexmap = { version = "1.9.1", features = ["serde"] }

[build-dependencies]
vergen = "7.3.2"
anyhow = "1.0"
