[package]
name = "libavacado"
version = "0.2.3"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6", features = [ "runtime-actix-rustls", "postgres", "chrono", "uuid", "bigdecimal", "json", "offline"] }
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["model", "http", "cache", "rustls_backend"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls", "rustls-tls-native-roots"] }
serde = "1.0"
serde_json = "1.0"
log = "0.4"
chrono = { version = "0.4", features = ["serde"]}
rand = "0.8.5"
itertools = "0.10.5"
indexmap = { version = "1.9.1", features = ["serde"] }

[build-dependencies]
vergen = "7.4.4"
anyhow = "1.0"
