[package]
name = "libteapot"
version = "0.1.0"
edition = "2021"
description = "Fork/modified version of slog-json for arcadia"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
slog = { version = "2.7.0", features = ["nested-values"] }
serde_json = "1"
serde = "1"
erased-serde = {version = "0.3", optional = true }
time = { version = "0.3.6", features = ["formatting"] }
slog-async = "2.7.0"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
log = "0.4"

# Vendored actix logging
actix-web = { version = "4.0.1", features = ["rustls"] }
